docker-k8s-workshop/day3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-hello
  template:
    metadata:
      labels:
        app: flask-hello
    spec:
      containers:
      - name: flask-hello-container
        image: swadhin7008/hello-python:day1
        ports:
        - containerPort: 8080
